--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-flake8 = "*"
-pytest = "*"
+pytest-flask = "*"
 pytest-sugar = "*"
-pytest-cov = "*"
 
 [packages]
 flask = "*"
-python-dotenv = "*"
-pytest-cov = "*"
 
 [requires]
 python_version = "3.7"
