--- a/stark/backend/pyproject.toml
+++ b/stark/backend/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.7"
 fastapi = "^0.54.1"
 uvicorn = "^0.11.3"
 sqlalchemy = "^1.3"
+simple_settings = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
